docker containerization COMPLETE

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,20 @@ FROM python:latest
 
 WORKDIR /app
 
+# Install system dependencies required for PyMuPDF
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    python3-dev \
+    libffi-dev \
+    pkg-config \
+    libssl-dev \
+    libjpeg-dev \
+    zlib1g-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy requirements first for better caching
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application
 COPY . .
